src/test/deca/syntax/valid/parser/oracle/primary_expr_sixth_deriv.deca
{
	new A(); new int_float();
	new B();
}
