src/test/deca/syntax/invalid/parser/oracle/method_decl.deca
class A { a a a (a aa){} }
